change in the outputs file to test infra drift

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ keys/
 *.tfstate.*
 *.tfstate.backup
 tf.plan
+terraform-backend/
 
 # Terraform variable files (may contain secrets)
 terraform.tfvars
