--- a/.github/workflows/infratructure.yml
+++ b/.github/workflows/infratructure.yml
@@ -55,11 +55,15 @@ jobs:
       working-directory: ./infra/terraform
       run: |
         set +e
-        terraform plan -detailed-exitcode -out=tfplan -no-color 2>&1 | tee plan_output.txt
+        terraform plan \
+          -var "ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}" \
+          -detailed-exitcode \
+          -out=tfplan \
+          -no-color 2>&1 | tee plan_output.txt
+
         PLAN_EXIT_CODE=${PIPESTATUS[0]}
         echo "exitcode=$PLAN_EXIT_CODE" >> $GITHUB_OUTPUT
 
-        # Exit code 0 = no changes, 1 = error, 2 = changes detected
         if [ $PLAN_EXIT_CODE -eq 1 ]; then
           echo "❌ Terraform plan failed with errors"
           exit 1
