--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,6 +137,15 @@ services:
       - users-api
     networks:
       - app-network
+    labels:
+      - "traefik.enable=true"
+      
+      # ✅ For REMOTE (HTTPS):
+      - "traefik.http.routers.frontend.rule=Host(`${DOMAIN}`)"
+      - "traefik.http.routers.frontend.entrypoints=websecure"
+      - "traefik.http.routers.frontend.tls.certresolver=letsencrypt"
+      
+      - "traefik.http.services.frontend.loadbalancer.server.port=80"
 
 networks:
   app-network:
